--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fish in the Sky</title>
+  <title>Swimming Amongst the Clouds</title>
   <style>
     body {
       margin: 0;
       height: 100vh;
-      background: url("Swimming Amongst the Clouds.png") no-repeat center center;
+      background: url("Swimming Amongst the Clouds.jpg") no-repeat center center;
       background-size: cover;
       font-family: sans-serif;
     }
@@ -92,4 +92,5 @@
   </script>
 </body>
 </html>
+
 
